[gd_scene load_steps=3 format=3 uid="uid://c9vhj3m8x2k4q"]

[ext_resource type="Script" path="res://scripts/screens/ChoiceLogScreen.gd" id="1_choice_log"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel_bg"]
bg_color = Color(0.1, 0.1, 0.12, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.9, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ChoiceLogScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_choice_log")

[node name="Panel" type="PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel_bg")

[node name="MarginContainer" type="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TopBar" type="HBoxContainer"]
layout_mode = 2

[node name="Title" type="Label"]
layout_mode = 2
size_flags_horizontal = 3
text = "선택 기록"
theme_type_variation = &"LabelLarge"

[node name="CloseButton" type="Button"]
layout_mode = 2
text = "닫기"

[node name="ScrollContainer" type="ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChoiceList" type="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="NoChoicesLabel" type="Label"]
layout_mode = 2
text = "아직 선택한 분기점이 없습니다."
horizontal_alignment = 1
vertical_alignment = 1
